# universal_urdf

./: .gitignore  six_wheel_ugv.usd
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ugv_description/share/ament_index/resource_index/package_run_dependencies/: ugv_description
install/ugv_description/share/ament_index/resource_index/parent_prefix_path/: ugv_description
install/ugv_description/share/ugv_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ugv_description/share/ugv_description/cmake/: ugv_descriptionConfig.cmake
install/ugv_description/share/ugv_description/launch/: display.launch.py
install/ugv_description/share/ugv_description/urdf/: ugv.xacro  ugv_gazebo_plugins.xacro
install/ugv_gazebo/share/ament_index/resource_index/package_run_dependencies/: ugv_gazebo
install/ugv_gazebo/share/ugv_gazebo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ugv_gazebo/share/ugv_gazebo/cmake/: ugv_gazeboConfig.cmake
install/ugv_gazebo/share/ugv_gazebo/urdf/: ugv_gazebo_plugins.xacro
src/ugv_description/: CMakeLists.txt  package.xml
src/ugv_description/urdf/: ugv.urdf
src/ugv_description/urdf/ugv/: ugv.usd
src/ugv_description/urdf/ugv/configuration/: ugv_base.usd  ugv_physics.usd  ugv_sensor.usd
src/ugv_gazebo/: CMakeLists.txt
src/ugv_gazebo/launch/: display.launch.py
src/ugv_sim_bridge/: package.xml  setup.cfg  setup.py
(+1 files in other folders)
